修正错误单词

--- a/microservice-config-fmis.yml
+++ b/microservice-config-fmis.yml
@@ -1,5 +1,5 @@
 microserviceConfig:
-   miscroservice-FMIS:
+   microservice-FMIS:
     JZFMISSVR:
       context: EnterpriseServer
       ObjectName:
