修改objectName O为小写

--- a/microservice-config-fmis.yml
+++ b/microservice-config-fmis.yml
@@ -2,7 +2,7 @@ microserviceConfig:
    microservice-FMIS:
     JZFMISSVR:
       context: EnterpriseServer
-      ObjectName:
+      objectName:
         SecurityObject:
           method: Login
    
